# bxx

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  labels.py
src/: annotations.rs  app.rs  audit.rs  bridge.rs  buffer.rs  builtins.rs  commands.rs  config.rs  diff.rs  export.rs  main.rs  marks.rs  search.rs  structs.rs  transform.rs
src/analysis/: mod.rs  strings.rs  triage.rs
src/ui/: annopane.rs  hexview.rs  infobar.rs  minimap.rs  mod.rs
