[package]
name = "bxx"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
authors = ["Evin Lodder <evinlodder@gmail.com>"]
description = "A fast terminal hex editor and reverse-engineering workbench: annotations, struct templates, transforms, structural triage, and alignment-aware diffing"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/evinlodder/bx"
homepage = "https://github.com/evinlodder/bx"
keywords = ["hex", "hex-editor", "reverse-engineering", "firmware", "tui"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
exclude = ["/.claude", "/CLAUDE.md", "/.github"]

[features]
# Optional regex search (`/re:…`); off by default to keep the build tiny.
regex = ["dep:regex"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
memmap2 = "0.9"
md5 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", optional = true }

[profile.release]
lto = true
